maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:25: error: plm.universe.Direction does not take parameters
    setDirection(Direction.NORTH())
                                ^